Libftest/deepthought
= Host-specific information ====================================================
$> hostname; uname -msr
c1r8p4.42sp.org.br
Darwin 18.6.0 x86_64
$> date
Ter 18 Fev 2020 18:56:42 -03
$> gcc --version
Apple LLVM version 10.0.1 (clang-1001.0.46.4)
Target: x86_64-apple-darwin18.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 10.0.1 (clang-1001.0.46.4)
Target: x86_64-apple-darwin18.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= libft.h=======================================================================
$> norminette libft.h | grep -E '(Error|Warning)'

= Compiling libft ==============================================================
$> make re
rm -f *.o
rm -f libft.a
gcc -c -Wall -Werror -Wextra *.c
ft_memccpy.c:38:15: error: implicit declaration of function 'memccpy' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ptr = (char*)memccpy("salem", "ola mundo salem cabecudo", 30);
                     ^
ft_memccpy.c:38:8: error: cast to 'char *' from smaller integer type 'int' [-Werror,-Wint-to-pointer-cast]
        ptr = (char*)memccpy("salem", "ola mundo salem cabecudo", 30);
              ^
2 errors generated.
make: *** [libft.a] Error 1
gcc -c -Wall -Werror -Wextra *.c
ft_memccpy.c:38:15: error: implicit declaration of function 'memccpy' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        ptr = (char*)memccpy("salem", "ola mundo salem cabecudo", 30);
                     ^
ft_memccpy.c:38:8: error: cast to 'char *' from smaller integer type 'int' [-Werror,-Wint-to-pointer-cast]
        ptr = (char*)memccpy("salem", "ola mundo salem cabecudo", 30);
              ^
2 errors generated.
make: *** [libft.a] Error 1

$> ls -la libft.a
